--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,6 @@
 name: PyPI
 
-on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
-      - '!*[ab][0-9]*'
+on: push
 
 
 env:
@@ -71,7 +67,7 @@ jobs:
 
       - name: Build manylinux Python wheels
         if: matrix.os == 'ubuntu-latest'
-        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch64
         with:
           python-versions: ${{ matrix.python_versions }}
           build-requirements: 'cython numpy'
