--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,11 +59,9 @@ jobs:
           mamba install --file=requirements.txt
           python setup.py bdist_wheel
 
-      - name: Build source distribution
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          python setup.py sdist
-          twine upload --skip-existing dist/*.tar.gz
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
 
       - name: Build manylinux Python wheels
         if: matrix.os == 'ubuntu-latest'
