--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,12 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: [3.7, 3.8, 3.9]
         include:
           - os: ubuntu-latest
             platform: manylinux
             python_versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
-          - os: macos-latest
-            platform: macosx
-          - os: windows-latest
-            platform: win
         exclude:
           - os: ubuntu-latest
             python-version: 3.7
