--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,9 +1,6 @@
 name: TestPyPI
 
-on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+[ab][0-9]*
+on: push
 
 env:
   TWINE_USERNAME: __token__
@@ -73,6 +70,34 @@ jobs:
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
         with:
           python-versions: ${{ matrix.python_versions }}
+          build-requirements: 'cython numpy'
+
+      - name: Upload distributions
+        run: twine upload --skip-existing dist/*-${{ matrix.platform }}*.whl
+        
+ 
+  build-and-publish-aarch64:
+    name: Build and publish aarch64 wheels to TestPyPI
+    runs-on: ${{ matrix.os }}
+
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - name: Install build environment
+        run: pip install twine wheel numpy cython
+
+      - name: Build manylinux Python aarch64 wheels
+        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
+        with:
+          python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'cython numpy'
 
       - name: Upload distributions
