--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -87,7 +87,7 @@ jobs:
         run: pip install twine wheel numpy cython
 
       - name: Build manylinux Python aarch64 wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch6464
         with:
           python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'cython numpy'
