--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -86,8 +86,12 @@ jobs:
       - name: Install build environment
         run: pip install twine wheel numpy cython
 
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+
       - name: Build manylinux Python aarch64 wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch6464
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch64
         with:
           python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'cython numpy'
