--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -19,16 +19,12 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: [3.7, 3.8, 3.9]
         include:
           - os: ubuntu-latest
             platform: manylinux
             python_versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
-          - os: macos-latest
-            platform: macosx
-          - os: windows-latest
-            platform: win
         exclude:
           - os: ubuntu-latest
             python-version: 3.7
@@ -70,19 +66,42 @@ jobs:
  
   build-and-publish-aarch64:
     name: Build and publish aarch64 wheels to TestPyPI
-    runs-on: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
 
     defaults:
       run:
         shell: bash -l {0}
 
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: [3.7, 3.8, 3.9]
+        include:
+          - os: ubuntu-latest
+            platform: manylinux
+            python_versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
+        exclude:
+          - os: ubuntu-latest
+            python-version: 3.7
+          - os: ubuntu-latest
+            python-version: 3.9
+  
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: '3.8'
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+          channels: conda-forge
+          channel-priority: true
+
+      - name: Show conda installation info
+        run: |
+          conda info
+          conda list
+
       - name: Install build environment
         run: pip install twine wheel numpy cython
 
@@ -93,7 +112,7 @@ jobs:
       - name: Build manylinux Python aarch64 wheels
         uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch64
         with:
-          python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
+          python-versions: ${{ matrix.python_versions }}
           build-requirements: 'cython numpy'
 
       - name: Upload distributions
